# lnnrs

./: Cargo.toml  README.md  test_input_data.csv
src/: activation.rs  input.rs  lnn.rs  main.rs  network_components.rs  neuron.rs  ode_solver.rs  output.rs
